Fix list alignment

--- a/src/blocks/text-maxi/style.scss
+++ b/src/blocks/text-maxi/style.scss
@@ -4,8 +4,14 @@ body.maxi-blocks--active .maxi-text-block {
 	&__content {
 		position: relative;
 		display: inline-block;
-		width: 100%;
 		margin: 0;
+	}
+	p {
+		width: 100%;
+	}
+	ul,
+	ol {
+		list-style-position: inside;
 	}
 	a {
 		text-decoration: none;
